fix(bullet): add property to hide the bullet on small resolution (keep value) and apply in category and playlist tables AN-22494

--- a/src/app/shared/components/bullet/bullet.component.scss
+++ b/src/app/shared/components/bullet/bullet.component.scss
@@ -29,3 +29,8 @@
     }
   }
 }
+@media (max-width: 991px) {
+  .hideOnTablet {
+    display: none;
+  }
+}
